--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <footer class="noselect">
       <ul>
         <li>
-          <a href="https://www.notion.so/seancaat/07a5a0e6119c41f59154058a4760e0e1?v=65207c70dc4147929bf48e09ac80657f" target="_blank">Portfolio</a>
+          <a href="https://seancaat.notion.site/Sean-Catangui-58e781898fbd4dfb8f5d567a4eb2a2a2?pvs=4" target="_blank">Portfolio</a>
         </li>
         <li>
-          <a href="https://twitter.com/_catangui" target="_blank">Twitter</a>
+          <a href="https://www.are.na/sean-catangui/channels" target="_blank">are.na</a>
         </li>
         <li>
           <a href="https://github.com/seancaat" target="_blank">GitHub</a>
