new portfolio link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer class="noselect">
       <ul>
         <li>
-          <a href="https://seancaat.notion.site/Sean-Catangui-58e781898fbd4dfb8f5d567a4eb2a2a2?pvs=4" target="_blank">Portfolio</a>
+          <a href="https://seancaat.notion.site/design-portfolio" target="_blank">Portfolio</a>
         </li>
         <li>
           <a href="https://www.are.na/sean-catangui/channels" target="_blank">are.na</a>
