favicon, some other stuff

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="/seedling.png">
+    <link rel="icon" type="image/png" href="/author-sean-catangui-thumbLarge.png">
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/normalize.css">
@@ -24,7 +24,7 @@
   
   <body>
     <h1 class="noselect">
-      Sean Catangui designs and builds websites.
+      Sean Catangui is a brand and editorial designer. He currently works at the New York Times.
     </h1>  
     <canvas id="myCanvas" resize></canvas>
     <footer class="noselect">
